7.0.5
  - Fixed a bug concerning temporary-table support.

7.0.4
  - Preventing NPE when trying to do an export via shell.

7.0.3
  - Minor bug fixes.

7.0.2
  - Fixed an NPE in MetaDataCache.
  - User's home directory is used for setup, configuration and log files.
  - Prevent exception if oracle.xdb.XMLTypeFactory is missing.

7.0.1
  - MS SQL Server datetime issue has been fixed. (https://sourceforge.net/p/jailer/discussion/700499/thread/5773eb1c/ )
  - SQLite fk detection bug has been fixed.

7.0
  - New API provides programmatic access to the data export and import functionality.
    http://jailer.sourceforge.net/api.html

6.7.6
  - Fixed an issue with Microsoft JDBC Driver 6.0 for SQL Server.

6.7.5
  - Fixed an incompatibility with jre 7.

6.7.4
  - CLI usage didn't print options.

6.7.3
  - Improved performance of database meta-data access. 
  - Minor bug fixes (Filter templates).

6.7.2
  - Added support for NCLOB data type.
  - Improved graph layout optimization in progress panel.

6.7
  - Visualization of progress of delete-reduction.
  - Improved File Dialog.

6.6.3
  - Added popup menu for changing the "exclude from deletion" attribute of a table.

6.6.2
  - Minor bug fixes.

6.6.1
  - Added option for analyzing data model via CLI.
  - Minor bug fixes.

6.6.0
  - Improved filter management. Support for import-filters and literal-filters.
    http://jailer.sourceforge.net/filters.html

6.5.2
  - Fix for "DML->Update script template is broken for tables with timestamp columns"
    https://sourceforge.net/p/dbeauty/tickets/8/

6.5.1
  - Added support for User-Defined Types.
  - Minor bug fixes.

6.5
  - Referential cycles can now be exported by deferring the insert of nullable foreign keys.

6.4.1
  - Added support for Views and Synonyms. (https://sourceforge.net/p/jailer/feature-requests/36/)

6.4
  - Performance improvement.
  - Added inline view style for DB2 z/OS.
  - Added support for DB2 z/OS.

6.3.4
  - Added inline view style for Informix.

6.3.3