@@ -25,7 +25,7 @@ public class JailerVersion {
 	/**
 	 * The Jailer version.
 	 */
-	public static final String VERSION = "7.0.5.b";
+	public static final String VERSION = "7.0.5";
 	
 	/**
 	 * The Jailer working tables version.
